[gd_scene load_steps=10 format=3 uid="uid://cn251dn5ray70"]

[ext_resource type="Script" uid="uid://s0y5v6b8q1i5" path="res://Games/Template/main_template.gd" id="1_b0t8i"]
[ext_resource type="PackedScene" uid="uid://b08kjjqo7wc47" path="res://Games/Template/gameplay/GamePlay.tscn" id="2_b0t8i"]
[ext_resource type="PackedScene" uid="uid://poaf8k3f50e8" path="res://Games/Template/ui/StartMenu.tscn" id="3_b0t8i"]
[ext_resource type="PackedScene" uid="uid://bmpa6dfi30xtl" path="res://Games/juicyjutsu/ui/HUD.tscn" id="5_dyn1e"]
[ext_resource type="PackedScene" uid="uid://cddet80t2t6tc" path="res://Games/Template/ui/PauseMenu.tscn" id="6_b0t8i"]
[ext_resource type="PackedScene" uid="uid://vsp67ur58n2v" path="res://Games/Template/ui/GameOverMenu.tscn" id="6_ky7lo"]
[ext_resource type="PackedScene" uid="uid://bywuqxwu8qqup" path="res://Games/juicyjutsu/systems/Highscore_Manager.tscn" id="8_0r3yx"]
[ext_resource type="PackedScene" uid="uid://edm32w82j3y2" path="res://Games/juicyjutsu/systems/CameraShake.tscn" id="9_656ne"]
[ext_resource type="PackedScene" uid="uid://b0hy7sbbgd27t" path="res://Games/Template/systems/AudioManager.tscn" id="9_b0t8i"]

[node name="GameRoot" type="Node2D"]
script = ExtResource("1_b0t8i")

[node name="GamePlay" parent="." instance=ExtResource("2_b0t8i")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="StartMenu" parent="UI" instance=ExtResource("3_b0t8i")]

[node name="Hud" parent="UI" instance=ExtResource("5_dyn1e")]
visible = false
script = null

[node name="PauseMenu" parent="UI" instance=ExtResource("6_b0t8i")]

[node name="GameOverMenu" parent="UI" instance=ExtResource("6_ky7lo")]

[node name="HighscoreManager" parent="." instance=ExtResource("8_0r3yx")]
script = null

[node name="CameraShake" parent="." instance=ExtResource("9_656ne")]
script = null

[node name="AudioManager" parent="." instance=ExtResource("9_b0t8i")]
